--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".MyNotes"
+            android:exported="false" />
+        <activity
+            android:name=".AddNewNote"
+            android:exported="false" />
+        <activity
             android:name=".ViewSchedule"
             android:exported="false">
             <meta-data
