Added notifications, have some bug.

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Apr 09 20:46:36 PKT 2023
-sdk.dir=/Users/tms/Library/Android/sdk
+sdk.dir=C\:\\Users\\faixi\\AppData\\Local\\Android\\Sdk
