--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,7 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.2.1'
 
+    implementation 'com.google.android.material:material:1.4.0'
+
+
 }
